--- a/sources/CompanyManagementAPI/Properties/launchSettings.json
+++ b/sources/CompanyManagementAPI/Properties/launchSettings.json
@@ -9,6 +9,14 @@
     }
   },
   "profiles": {
+    "MiddlewareExample": {
+      "commandName": "Project",
+      "dotnetRunMessages": true,
+      "launchBrowser": true,
+      "launchUrl": "weatherforecast",
+      "applicationUrl": "https://localhost:5001;http://localhost:5000",
+      "environmentVariables": { "ASPNETCORE_ENVIRONMENT": "Development" }
+    },
     "http": {
       "commandName": "Project",
       "dotnetRunMessages": true,
