Using ef core code first generate database

--- a/sources/CompanyManagementAPI/appsettings.json
+++ b/sources/CompanyManagementAPI/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
+  "ConnectionStrings": {
+    "sqlConnection": "Host=localhost;Port=5432;Database=CompanyManagement;Username=postgres;Password=abc123"
+  },
   "AllowedHosts": "*"
 }
