--- a/sources/CompanyManagementAPI/Properties/launchSettings.json
+++ b/sources/CompanyManagementAPI/Properties/launchSettings.json
@@ -15,7 +15,9 @@
       "launchBrowser": true,
       "launchUrl": "weatherforecast",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
-      "environmentVariables": { "ASPNETCORE_ENVIRONMENT": "Development" }
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development"
+      }
     },
     "http": {
       "commandName": "Project",
