--- a/sources/CompanyManagementAPI/Properties/launchSettings.json
+++ b/sources/CompanyManagementAPI/Properties/launchSettings.json
@@ -9,10 +9,10 @@
     }
   },
   "profiles": {
-    "MiddlewareExample": {
+    "CompanyManagementAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "weatherforecast",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
