--- a/sources/CompanyEmployees.Presentation/CompanyEmployees.Presentation.csproj
+++ b/sources/CompanyEmployees.Presentation/CompanyEmployees.Presentation.csproj
@@ -7,7 +7,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="9.0.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Core" Version="2.3.0" />
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="8.0.14" />
   </ItemGroup>
 
   <ItemGroup>
