--- a/sources/CompanyManagementAPI/appsettings.json
+++ b/sources/CompanyManagementAPI/appsettings.json
@@ -8,5 +8,10 @@
   "ConnectionStrings": {
     "sqlConnection": "Host=localhost;Port=5432;Database=CompanyManagement;Username=postgres;Password=abc123"
   },
+  "JwtSettings": {
+    "validIssuer": "CodeMazeAPI",
+    "validAudience": "https://localhost:5001",
+    "expires": 5
+  },
   "AllowedHosts": "*"
 }
