Add API response base

--- a/sources/CompanyManagementAPI/Properties/launchSettings.json
+++ b/sources/CompanyManagementAPI/Properties/launchSettings.json
@@ -12,7 +12,7 @@
     "CompanyManagementAPI": {
       "commandName": "Project",
       "dotnetRunMessages": true,
-      "launchBrowser": true,
+      "launchBrowser": false,
       "launchUrl": "companies",
       "applicationUrl": "https://localhost:5001;http://localhost:5000",
       "environmentVariables": {
